Prevent weird behavior by canceling sidebar horizontal scroll

--- a/Sage-Like/sidebar/panel.css
+++ b/Sage-Like/sidebar/panel.css
@@ -36,6 +36,7 @@ html, body {
 	line-height: var(--line-height);
 	background-color: var(--bk-color-window);
 	color: var(--color-text);
+	overflow-x: hidden;
 }
 
 .top {
